# gtm-mcp

./: .gitignore  FORK_INFO.md  PUBLISHING.md  README.md  SETUP.md  pyproject.toml  requirements.txt
src/gtm_mcp/: gtm_client.py  server.py  tools.py
