[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtm-mcp"
version = "0.1.0"
description = "MCP server for Google Tag Manager"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Paolo Bietolini", email = "chat@paolobietolini.com"}
]
license = {text = "MIT"}
keywords = ["mcp", "google-tag-manager", "gtm", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.9.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-api-python-client>=2.108.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/paolobtl/gtm-mcp"
Repository = "https://github.com/paolobtl/gtm-mcp"
Issues = "https://github.com/paolobtl/gtm-mcp/issues"

[project.scripts]
gtm-mcp = "gtm_mcp.server:run"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gtm_mcp*"]

[tool.setuptools.package-data]
gtm_mcp = ["py.typed"]
